# enterprise-ai-reliability-platform-v1

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EARP-CODING-COMPLETE-001_2026-04-24_v001.txt  LICENSE  POLISH_NOTES.md  README.md  README_CANONICAL.txt  RELEASE.md  SECURITY.md  pyproject.toml
.a1/: a1_index.json
.azure/: plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
Azure/: Azure.txt  DEPLOYMENT.md  README.md
Front end/: Front end..txt
GitHub documentation/: GitHub documentation.txt
Middle layer/: Middle layer..txt
api/: api.txt
architecture_and_api_contracts/: architecture_and_api_contracts.txt  building_block_view.txt  data_model_schema.txt  deployment_view.txt  error_model_and_status_codes.txt  integration_contracts.txt  openapi_spec.yaml  runtime_scenarios.txt
data_governance_and_privacy_plan/: data_governance_and_privacy_plan.txt
decision_log_adr/: decision_log_adr.txt
docs/: PORTFOLIO_BRIEF.md  README.md  SPRINT_PLAN.md  dashboard-reporting.md  go-no-go.md  hr-review-guide.md  release-evidence.md  security-compliance-evidence-bundle.md
enterprise-ai-reliability-platform-v1/: sdlc_baseline_project_software_development_life_cycle_txt
enterprise_ai_backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  run.py  test_backend.py
enterprise_ai_reliability_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
go_no_go_checklist/: go_no_go_checklist.txt
gui/: New Text Document.txt
incident_response_runbook/: incident_response_runbook.txt
(+174 files in other folders)
