[project]
name = "enterprise-ai-reliability-platform"
version = "0.3.0"
description = "Enterprise AI Reliability Platform — quantifies AI reliability with auditable release decisions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-anyio>=0.0.0",
    "anyio>=4.0.0,<5.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.4.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["enterprise_ai_backend*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
